set maxnames=100 option for biblatex to see all authors' names instead of "et al."

--- a/bibtest.tex
+++ b/bibtest.tex
@@ -1,7 +1,11 @@
 \documentclass[12pt]{scrartcl}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[urldate=iso8601,hyperref=auto,style=reading,backend=bibtex]{biblatex}
+\usepackage[urldate=iso8601,
+hyperref=auto,
+style=reading,
+maxnames=100,
+backend=bibtex]{biblatex}
 \addbibresource{ceur-ws/temp.bib}
 \begin{document}
 \nocite{*}
